--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <title>Homework Week 9</title>
 </head>
 <body>
-    <div id="choropleth_map"></div>
+    <div id="proportional_symbol_map"></div>
 
     <script type="text/javascript">
 
-    var vg_1 = "js/happiness_report_choropleth_map.vg.json";
+    var vg_1 = "js/mcdonald_store_reviews.vg.json";
 
-    vegaEmbed("#choropleth_map", vg_1).then(function(result){}).catch(console.error);
+    vegaEmbed("#proportional_symbol_map", vg_1).then(function(result){}).catch(console.error);
     
     </script>
     
